fix toc on tablet mode. fixes #94 #105

--- a/css/area_nav-metabox.less
+++ b/css/area_nav-metabox.less
@@ -34,6 +34,7 @@
     &.sticky {
         position: fixed;
         top: 0;
+        width: calc(100% - 13em);
 
         ul.meta-tabs > li > a {
             border-top-color: @ini_background_site;
